--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfpub/babel-preset",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Selfpub's babel preset for transforming JavaScript",
   "main": "index.js",
   "repository": {
@@ -37,21 +37,15 @@
     "@babel/plugin-proposal-throw-expressions": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.1.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.1.0",
-    "babel-eslint": "^10.0.1",
+    "@selfpub/eslint-config": "^0.0.2",
     "eslint": "^5.6.1",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "prettier": "^1.14.3",
     "safe-publish-latest": "^1.1.2"
   },
   "scripts": {
