--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfpub/babel-preset",
-  "version": "0.0.3",
+  "version": "1.0.0",
   "description": "Selfpub's babel preset for transforming JavaScript",
   "main": "index.js",
   "repository": {
@@ -10,17 +10,13 @@
   "keywords": [
     "babel",
     "es6",
-    "es2015",
-    "es2016",
-    "es2017",
-    "es2018",
-    "javascript"
+    "javascript",
+    "selfpub"
   ],
   "homepage": "https://github.com/selfpub-org/babel-preset",
   "author": "Ilya Reshetnikov <inbox@devxom.tech>",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-do-expressions": "^7.0.0",
@@ -37,6 +33,7 @@
     "@babel/plugin-proposal-throw-expressions": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-classes": "^7.1.0",
     "@babel/plugin-transform-modules-commonjs": "^7.1.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
@@ -44,9 +41,14 @@
     "babel-core": "^7.0.0-bridge.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
     "@selfpub/eslint-config": "^0.0.2",
     "eslint": "^5.6.1",
     "safe-publish-latest": "^1.1.2"
+  },
+  "peerDependencies": {
+    "@babel/core": "^7.0.0"
   },
   "scripts": {
     "prepublish": "safe-publish-latest",
