--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@babel/preset-flow": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-plugin-dynamic-import-node": "^2.3.0"
+    "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-plugin-styled-components": "^1.10.6",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
